@@ -28,7 +28,6 @@
 
 
 #import "CCActionManager.h"
-#import "CCScheduler.h"
 #import "ccMacros.h"
 
 @interface CCActionManager (Private)
